<resources>
    <string name="app_name">Meeting Scheduler</string>
    <string name="action_prev"><![CDATA[< Prev]]></string>
    <string name="action_next"><![CDATA[Next >]]></string>
    <string name="action_back"><![CDATA[< Back]]></string>

    <string name="start_end_time">%1s - %2s</string>
    <string name="schedule_company_meeting">Schedule company meeting</string>
    <string name="schedule_meeting_submit">Submit</string>
    <string name="schedule_a_meeting">SCHEDULE A MEETING</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="time_format">%02d:%02d</string>

    <string name="slot_available">Selected meeting time slot is available!</string>
    <string name="slot_unavailable">This is already a meeting scheduled for the
        selected date-time slot.\n\nPlease select a different time slot.</string>


</resources>
